--- a/.github/ISSUE_TEMPLATE/TASK.yml
+++ b/.github/ISSUE_TEMPLATE/TASK.yml
@@ -1,5 +1,5 @@
 name: "🧩 Task"
-description: "A single unit of implementation work (linked to a Feature)"
+description: A concrete unit of implementation work (sub-issue of a Feature)
 title: "🧩 [TASK] - <short title>"
 labels: ["task"]
 
@@ -7,26 +7,26 @@ body:
   - type: markdown
     attributes:
       value: |
-        Use this for a concrete piece of work. If it's a user-visible change, consider raising a Feature instead.
+        **Tasks are engineering deliverables.**
+        Best practice: create this Task *from the Feature* using **Create sub-issue** so the hierarchy is correct. :contentReference[oaicite:1]{index=1}
 
   - type: input
     id: feature_link
     attributes:
       label: "Linked Feature"
-      description: "Paste the Feature issue reference (e.g. #123) or full URL."
+      description: "Required for traceability. Paste #123 or full URL."
       placeholder: "#123"
     validations:
       required: true
 
   - type: textarea
-    id: user_story
+    id: task_goal
     attributes:
-      label: "User story"
-      description: "Format: As a <user>, I want <capability>, so that <benefit>."
+      label: "Task goal"
+      description: One or two sentences describing what will be delivered.
       placeholder: |
-        As a ...
-        I want ...
-        So that ...
+        Implement/Update/Refactor ...
+        Notes on expected behaviour:
     validations:
       required: true
 
@@ -34,11 +34,10 @@ body:
     id: acceptance_criteria
     attributes:
       label: "Acceptance criteria"
-      description: "Clear, testable conditions for completion."
+      description: "Engineering/testable conditions (can be different from Feature AC)."
       placeholder: |
         - AC1:
         - AC2:
-        - AC3:
     validations:
       required: true
 
@@ -46,7 +45,6 @@ body:
     id: priority
     attributes:
       label: "Priority"
-      description: "Relative urgency/importance."
       options:
         - "P0 - Critical (blocker)"
         - "P1 - High"
@@ -59,11 +57,10 @@ body:
     id: implementation_notes
     attributes:
       label: "Implementation notes / links"
-      description: "Optional context, approach, references, related PRs/issues."
       placeholder: |
-        - Context:
         - Approach:
-        - References:
+        - Dependencies:
+        - Related PRs/issues:
     validations:
       required: false
 
