--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: false
+contact_links:
+  - name: "📧 Support"
+    url: "https://github.com/AssetCool/.github/blob/main/README.md"
+    about: "Email engineering support (details here)."
