feat: Update README.md and config to provide better usage info

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: "📧 Support"
     url: "https://github.com/AssetCool/.github/blob/main/README.md"
-    about: "Email engineering support (details here)."
+    about: "Issue type usage and support email address can be found here."
