--- a/.github/ISSUE_TEMPLATE/02-FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/02-FEATURE_REQUEST.yml
@@ -55,6 +55,24 @@ body:
     validations:
       required: true
 
+  - type: markdown
+    attributes:
+      value: |
+        **Story points are relative (not hours).** Use them to express overall effort/complexity/uncertainty.
+
+        **Quick guide**
+        - 0: no work / already done
+        - ½–1: tiny, well understood, low risk
+        - 2–3: small, straightforward, some unknowns
+        - 5: medium, multiple steps, needs testing
+        - 8: large, design decisions / more moving parts
+        - 13: very large, high uncertainty — consider splitting
+        - 20/40/100: too big/uncertain — break down before committing
+        - ?: not enough info to estimate (needs clarification/spike)
+        - ∞: unbounded/unestimable as written (re-scope)
+
+        Further explanation: [Why the Fibonacci sequence works well for estimating](https://www.mountaingoatsoftware.com/blog/why-the-fibonacci-sequence-works-well-for-estimating)
+
   - type: dropdown
     id: story_points
     attributes:
@@ -76,24 +94,6 @@ body:
         - "∞ (unbounded/rescope)"
     validations:
       required: true
-
-    - type: markdown
-    attributes:
-      value: |
-        ***Story points are relative (not hours).*** Use them to express overall effort/complexity/uncertainty.
-
-        ***Quick guide***
-        - 0: no work / already done
-        - ½–1: tiny, well understood, low risk
-        - 2–3: small, straightforward, some unknowns
-        - 5: medium, multiple steps, needs testing
-        - 8: large, design decisions / more moving parts
-        - 13: very large, high uncertainty — consider splitting
-        - 20/40/100: too big/uncertain — break down before committing
-        - ?: not enough info to estimate (needs clarification/spike)
-        - ∞: unbounded/unestimable as written (re-scope)
-
-        Further explanation: [Why the Fibonacci sequence works well for estimating](https://www.mountaingoatsoftware.com/blog/why-the-fibonacci-sequence-works-well-for-estimating)
 
   - type: textarea
     id: notes
