--- a/.github/workflow-templates/autoadd-to-project.yml
+++ b/.github/workflow-templates/autoadd-to-project.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - uses: actions/add-to-project@v1
         with:
-          project-url: https://github.com/orgs/<orgName>/projects/<projectNumber>
+          project-url: https://github.com/orgs/AssetCool/projects/<projectNumber>
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
