--- a/.github/workflows/_autolink-to-project.yml
+++ b/.github/workflows/_autolink-to-project.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - uses: actions/add-to-project@v1
         with:
-          project-url: https://github.com/orgs/<orgName>/projects/3
+          project-url: https://github.com/orgs/AssetCool/projects/3
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
