--- a/.github/ISSUE_TEMPLATE/04-BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/04-BUG_REPORT.yml
@@ -93,3 +93,9 @@ body:
         - Added regression test (if applicable)
     validations:
       required: false
+
+  - type: markdown
+    attributes:
+      value: |
+        ✅ **After creating this issue:** please add it to the appropriate **Project** using the right-hand sidebar → **Projects**.
+        If you’re not sure which Project to use, ask in #eng or email engineering@assetcool.com.
