--- a/.github/ISSUE_TEMPLATE/02-FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/02-FEATURE_REQUEST.yml
@@ -15,7 +15,7 @@ body:
     attributes:
       label: "User story"
       description: "Try to write roughly in the form: As a &lt;user&gt;, I want &lt;capability&gt;, so that &lt;benefit&gt;."
-      value: "As a <user>, I want <capability>, so that <benefit>."
+      value: "As a &lt;user&gt;, I want &lt;capability&gt;, so that &lt;benefit&gt;."
     validations:
       required: true
 
@@ -45,11 +45,11 @@ body:
     attributes:
       label: "Notes / design / links"
       value: |
-      **Story points are relative (not hours). Use them to express overall effort/complexity/uncertainty.**
+        **Story points are relative (not hours). Use them to express overall effort/complexity/uncertainty.**
 
-        **Please use the following as a guide for populating the ***Effort*** field during Sprint Planning:**
+        **Please use the following as a guide for populating the _Estimate_ field during Sprint Planning:**
 
-        **Quick guide***
+        **Quick guide**
         - ?: not enough info to estimate (needs clarification/spike)
         - ½–1: tiny, well understood, low risk
         - 2–3: small, straightforward, some unknowns
@@ -66,8 +66,8 @@ body:
   - type: markdown
     attributes:
       value: |
-        ✅ **After creating this issue:** please add it to the appropriate **Project** using the right-hand sidebar → **Projects**.
+        ✅ **After creating this issue:** please add it to the appropriate _Project_ using the right-hand sidebar → _Projects_.
         N.B. If you have linked the Feature to an Epic that is already part of this project, the Feature should inherit this.
 
-        At Sprint Planning, once the issue is moved to **Ready** Status, please ensure that a Priority is assigned and an **Estimate** is given using the guide above.
-        If you’re not sure which Project to use, ask in email engineering@assetcool.com.
+        At Sprint Planning, once the issue is moved to **Ready** Status, please ensure that a _Priority_ is assigned and an _Estimate_ is given using the guide above.
+        If you’re not sure which Project to use, ask by emailing engineering@assetcool.com.
