--- a/.github/workflows/_autocomment-advice.yml
+++ b/.github/workflows/_autocomment-advice.yml
@@ -66,7 +66,7 @@ jobs:
             To make this bug easy to reproduce and verify:
 
             - **Expected vs actual**: what should happen vs what happened
-            - **Repro steps**: minimal steps to reproduce
+            - **Reproduction steps**: minimal steps to reproduce
             - **Environment/version**: device/OS/app version/commit/build
             - **Evidence**: logs, screenshots, error messages
             - **Fix criteria**: how we’ll know it’s fixed (ideally a regression test)
@@ -80,14 +80,12 @@ jobs:
             **Story points are relative (not hours).** Use them to express overall effort/complexity/uncertainty.
 
             **Use this as a guide for populating _Projects → Estimate_ during Sprint Planning:**
-            - **?**: not enough info to estimate (needs clarification/spike)
             - **½–1**: tiny, well understood, low risk
             - **2–3**: small, straightforward, some unknowns
             - **5**: medium, multiple steps, needs testing
             - **8**: large, design decisions / more moving parts
             - **13**: very large, high uncertainty — consider splitting
             - **20/40/100**: too big/uncertain — break down before committing
-            - **∞**: unbounded/unestimable as written (re-scope)
 
             Further explanation: https://www.mountaingoatsoftware.com/blog/why-the-fibonacci-sequence-works-well-for-estimating
             </details>`.replace(/^ {12}/gm, "").trim();
