--- a/.github/ISSUE_TEMPLATE/01-EPIC.yml
+++ b/.github/ISSUE_TEMPLATE/01-EPIC.yml
@@ -1,5 +1,5 @@
 name: "🗺️ Epic"
-description: A multi-sprint outcome made up of features
+description: A multi-sprint outcome delivered through multiple Features
 title: "🗺️ [EPIC] - <outcome>"
 labels: ["epic"]
 
@@ -7,18 +7,27 @@ body:
   - type: markdown
     attributes:
       value: |
-        **Epics are outcomes** (usually multi-sprint) delivered through multiple Features.
-        Create Features as sub-issues of this Epic.
+        **Epics are outcomes** (usually multi-sprint) delivered through multiple **Features**.
+        Use this to describe the *why* and *what “done” looks like*, then create Features as **sub-issues** of this Epic.
+        Avoid using an Epic as a general “bucket” for unrelated work — keep it one coherent outcome.
 
   - type: textarea
     id: outcome
     attributes:
       label: "Outcome / goal"
-      description: What are we trying to achieve and for whom?
-      placeholder: |
+      description: "What are we trying to achieve, for whom, and why now?"
+      value: |
         Outcome:
-        Users impacted:
+        - (What will be possible / improved when this epic is done?)
+
+        Stakeholders / users impacted:
+        - (Operator / customer / support / developer / etc.)
+
         Why now:
+        - (What’s driving this? deadline, incident trend, customer need, risk reduction)
+
+        How we’ll measure success (optional):
+        - (e.g. time saved, fewer incidents, latency, adoption)
     validations:
       required: true
 
@@ -26,12 +35,16 @@ body:
     id: scope
     attributes:
       label: "Scope"
-      description: What’s in / out (keep it high-level).
-      placeholder: |
+      description: "High-level boundaries. Keep it short and explicit."
+      value: |
         In scope:
-        - ...
+        - …
+
         Out of scope:
-        - ...
+        - …
+
+        Notes (optional):
+        - …
     validations:
       required: false
 
@@ -39,11 +52,12 @@ body:
     id: exit_criteria
     attributes:
       label: "Exit criteria (definition of done)"
-      description: Clear conditions for closing the Epic.
-      placeholder: |
-        - All planned Features complete
-        - Success metrics met
-        - Docs/ops notes updated (if applicable)
+      description: "Clear conditions for closing this Epic."
+      value: |
+        - Planned Features created and completed (as sub-issues)
+        - User-facing acceptance criteria met for each Feature
+        - Operational readiness complete (docs/runbooks/alerts updated if needed)
+        - Any success metric targets met (if defined)
     validations:
       required: true
 
@@ -63,7 +77,7 @@ body:
     id: target_window
     attributes:
       label: "Target window"
-      description: Optional (e.g. Sprint 14–16, Q1, or a date).
+      description: "Optional. Prefer a range (e.g. Sprint 14–16, Q1) over a single date."
       placeholder: "e.g. Sprint 14–16"
     validations:
       required: false
@@ -72,11 +86,15 @@ body:
     id: dependencies_risks
     attributes:
       label: "Dependencies / risks"
-      placeholder: |
+      value: |
         Dependencies:
-        - ...
+        - (Other teams, vendors, hardware availability, API contracts, etc.)
+
         Risks:
-        - ...
+        - (Unknowns, integration risk, time constraints, safety/ops risk)
+
+        Mitigations (optional):
+        - …
     validations:
       required: false
 
